CL:1.11 - Fixed overflow on x-axis , revamped responsiveness.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu&display=swap');
 
 
-body{
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
     font-family: "Montserrat";
 }
 
@@ -178,13 +183,47 @@ p{
 @media (max-width:992px){
     #title{
         text-align: center;
-        /* font-size: 2.5rem; */
+    }
+
+    .heading{
+        font-size: 3rem;
     }
     
     .title-img{
         padding-top: 8%;
         position: static;
         transform: rotate(0);
+        width: 80%;
+    }
+
+    #testimonials h2{
+        font-size: 2rem;
+        padding-bottom: 3%;
+    }
+
+    #pricing{
+        /* font-size: 2rem; */
+        padding: 100px 50px;
+    }
+    
+    .card-price{
+    font-weight: bold;
+    font-size: 2rem;
+    padding-bottom: 3%;
+    }
+
+    .card {
+        width: 100%;
+    }
+
+    .pricing-h2{
+        font-size: 1.5rem;
+        font-weight: bold;
+        padding-bottom: 10%;
+    }
+
+    #cta h3 {
+        font-size: 2rem;
     }
 }
 
